--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 * {
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
 }
-:root {
-	--clr-neon: hsl(317 100% 54%);
-	--clr-bg: hsl(323 21% 16%);
+
+body{
+	height: 100%;
+	background-color: #eee;
+	font-family: 'Roboto', sans-serif;
 }
 
 .header {
@@ -19,68 +22,38 @@
 	position: relative;
 	margin-top: 64px;
 	transform: translateZ(-50px);
-	
 }
 
-@keyframes slideInFromTop {
-    0% {
-    	/* transform: translateY(-100%); */
-	    bottom: 50%;
-    }
-    100% {
-    /* transform: translateX(0); */
-		bottom: 0%;
-    }
-}
-@keyframes slideInFromLeft {
-	0% {
-	  /* transform: translateY(-100%); */
-	 /* height: 10%; */
-	}
-	100% {
-	  /* transform: translateX(0); */
-	  /* height: 50%; */
-	}
-}
 .block {
 	width: 28px;
-	background-color: #6b5b95;
-	border-radius: 5px #6b5b95;
+	background-color: #add8e6;
+	border-radius: 5px #add8e6;
 	position: absolute;
 	bottom: 0px;
 	transition: 0.2s all ease;
-	/* animation: 1s ease-out 0s none slideInFromLeft; */
-	/* animation: none !important; */
-	/* color: var(--clr-neon); */
-    /* border: var(--clr-neon) 0.125em solid; */
-  	/* text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.1), 0 0 0.45em currentColor; */
-
-    /* box-shadow: inset 0 0 0.7em 0 var(--clr-neon), 0 0 0.7em 0 var(--clr-neon); */
-	/* transform-style: preserve-3d; */
-	/* box-shadow: 120px 80px 40px 20px #0ff; */
-	/* box-shadow: 0 5px 6px rgba(107, 91, 149, 1), 0 5px 4px rgba(107, 91, 149, 0.24); */
 }
 
-/* .block:nth-child(even){
-	background-color: black;
-	animation: 1s ease-out 0s none slideInFromTop;
-}
-
-.block:nth-child(odd){
-	animation: 1s ease-out 0s none slideInFromLeft;
-} */
 
 @media screen and (max-width: 600px) {
 	.block {
-		width: 15px;
-		background-color: #6b5b95;
+		width: 17px;
+		background-color: #add8e6;
 		position: absolute;
 		bottom: 0px;
 		transition: 0.2s all ease;	
 	}
+
+	.block_count {
+		position: absolute;
+		color: black;
+		margin-top: 1px;
+		margin-right: 1px;
+		width: 100%;
+		text-align: center;
+	}
 }
 
-.block_id {
+.block_number {
 	position: absolute;
 	color: var(--clr-bg);
 	margin-top: -20px;
@@ -90,19 +63,20 @@
 
 .block2 {
 	width: 28px;
-	background-color: darkgray;
+	background-color: lightgray;
 	position: absolute;
 	transition: 0.2s all ease;
 }
 
-.block_id2 {
+.block_indx {
 	position: absolute;
 	color: black;
 	margin-top: 22px;
 	width: 100%;
 	text-align: center;
 }
-.block_id3 {
+
+.block_count {
 	position: absolute;
 	color: black;
 	margin-top: 1px;
@@ -115,22 +89,25 @@
 	width: 598px; */
 	margin: auto;
 }
+
 .keepFormatted{
 	white-space: pre;
 }
 
+
+/* container for signs */
 .modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
+	display: none; 
+	position: fixed; 
+	z-index: 1; 
+	padding-top: 100px;
 	left: 0;
 	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0, 0, 0); /* Fallback color */
-	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+	width: 100%; 
+	height: 100%; 
+	overflow: auto; 
+	background-color: rgb(0, 0, 0); 
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Modal Content */
@@ -157,29 +134,9 @@
 	cursor: pointer;
 }
 
-/* succusses / fail */
-HTML {
-	/*using system font-stack*/
-	box-sizing: border-box;
-}
-
-BODY {
-	margin: 0;
-	color: #3a3d40;
-	background: rgb(252, 252, 252);
-}
-
-/* *,
-*::before,
-*::after {
-	box-sizing: inherit;
-	color: inherit;
-} */
-
-/*Actual Style*/
-
+/* success & fail sign */
 /*=======================
-       C-Container
+	C-Container
 =========================*/
 .c-container {
 	max-width: 27rem;
@@ -188,7 +145,7 @@ BODY {
 }
 
 /*=======================
-       O-Circle
+	O-Circle
 =========================*/
 
 .o-circle {
@@ -240,7 +197,7 @@ BODY {
 }
 
 /*=======================
-      Sign Success
+	Sign Success
 =========================*/
 
 .o-circle__sign--success {
@@ -269,7 +226,7 @@ BODY {
 }
 
 /*=======================
-      Sign Failure
+	Sign Failure
 =========================*/
 
 .o-circle__sign--failure {
@@ -296,10 +253,6 @@ BODY {
 .o-circle__sign--failure .o-circle__sign::after {
 	background: rgba(175, 57, 55, 0.8);
 }
-
-/*-----------------------
-      @Keyframes
---------------------------*/
 
 /*CIRCLE*/
 @keyframes circle-appearance {
@@ -357,10 +310,6 @@ BODY {
 	}
 }
 
-/*+++++++++++++++++++
-    @Media Queries
-+++++++++++++++++++++*/
-
 
 .button_lang {
 	cursor: pointer;
@@ -381,25 +330,176 @@ a {
     display: block;
 }
 
-/* .current_lang {
-	background: #b5d6b2;
-} */
-
-/* .translation {
-	text-align: center;
-	margin: 0.5em;
+.flex-container {
+	display: flex;
+	flex-wrap: wrap;
+	font-size: 18.5px;
 }
 
-.english {
-	font-family: "Asap", sans-serif;
-} */
-
-/* .chinese {
-	font-family: "Noto Sans SC", sans-serif;
-	font-size: 1.5em;
+.flex-item-left {
+	/* #f1f1f1 */
+	padding: 10px;
+	flex: 30%;
 }
 
-.japanese {
-	font-family: "Noto Sans JP", sans-serif;
-	font-size: 2em;
-} */
+.flex-item-right {
+	padding: 10px;
+	flex: 70%;
+}
+
+.container{
+	margin: 0 auto;
+}
+header{
+	background-color: #2b2929;
+	height: 50%;
+}
+header::after{
+	content: '';
+	display: table;
+	clear: both;
+}
+nav{
+	float: left;
+}
+nav ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+nav li{
+	display: inline-block;
+	margin-left: 70px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	position: relative;
+}
+nav a{
+	text-decoration: none;
+	color: #aaa;
+	text-transform: uppercase;
+	font-size: 15px;
+}
+nav a:hover{
+	color:white;
+}
+
+nav a:hover::before{
+	width: 100%;
+}
+
+.right{
+	float: right;
+}
+
+.center{
+	margin: auto;
+	width: 60%;
+}
+
+.flex-parent {
+	display: flex;
+	flex-wrap: wrap;
+	font-size: 18px;
+}
+
+.jc-center {
+	justify-content: center;
+}
+
+.margin-right {
+	margin-right: 20px;
+}
+
+button.margin-right {
+	margin-right: 20px;
+}
+
+.custom-btn {
+	width: 130px;
+	height: 40px;
+	padding: 10px 25px;
+	border: 2px solid #000;
+	/* font-family: 'Lato', sans-serif; */
+	font-weight: 500;
+	font-size: 17px;
+	background: transparent;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	position: relative;
+	display: inline-block;
+}
+
+@media only screen and (max-width: 600px) {
+	.custom-btn {
+		width: 115px;
+	}
+}
+  /* 1 */
+.btn-1 {
+	transition: all 0.3s ease;
+}
+.btn-1:hover {
+	box-shadow:
+	-7px -7px 20px 0px #fff9,
+	-4px -4px 5px 0px #fff9,
+	7px 7px 20px 0px #0002,
+	4px 4px 5px 0px #0001;
+}
+
+.slider {
+	-webkit-appearance: none;
+	width: 100%;
+	height: 2px;
+	background: #111;
+	border-radius: 5px;
+}
+
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	background: #00bcd4;
+	cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	background: #00bcd4;
+	cursor: pointer;
+}
+
+.group { 
+	position:relative; 
+	margin-bottom:45px; 
+}
+.group > input {
+	font-size:18px;
+	padding:10px 10px 10px 5px;
+	display:block;
+	width:300px;
+	border:none;
+	border-bottom:1px solid #757575;
+}
+
+input:focus {
+	outline:none;
+}
+.group > label {
+	color:#999; 
+	font-size:18px;
+	position:absolute;
+	left:5px;
+	top:10px;
+	transition:0.2s ease all; 
+}
+
+input:focus ~ label, input:valid ~ label {
+	top:-20px;
+	font-size:14px;
+	color:#5264AE;
+}
