--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 .header {
 	font-size: 20px;
 	text-align: center;
+	margin-bottom: 10rem;
 }
 
 #array {
@@ -81,8 +82,6 @@ body{
 }
 
 #count {
-	/* height: 265px;
-	width: 598px; */
 	margin: auto;
 }
 
@@ -90,8 +89,7 @@ body{
 	white-space: pre;
 }
 
-
-/* container for signs */
+/* ---------- */
 .modal {
 	display: none; 
 	position: fixed; 
@@ -102,11 +100,9 @@ body{
 	width: 100%; 
 	height: 100%; 
 	overflow: auto; 
-	background-color: rgb(0, 0, 0); 
 	background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content */
 .modal-content {
 	background-color: #fefefe;
 	margin: auto;
@@ -115,7 +111,6 @@ body{
 	width: 80%;
 }
 
-/* The Close Button */
 .close {
 	color: #aaaaaa;
 	float: right;
@@ -123,190 +118,60 @@ body{
 	font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover {
 	color: #000;
 	text-decoration: none;
 	cursor: pointer;
 }
 
-/* success & fail sign */
-/*=======================
-	C-Container
-=========================*/
 .c-container {
 	max-width: 27rem;
 	margin: 1rem auto 0;
 	padding: 1rem;
 }
 
-/*=======================
-	O-Circle
-=========================*/
-
 .o-circle {
 	display: flex;
-	width: 10.555rem;
-	height: 10.555rem;
+	width: 10rem;
+	height: 10rem;
 	justify-content: center;
-	align-items: flex-start;
 	border-radius: 50%;
-	animation: circle-appearance 0.8s ease-in-out 1 forwards, set-overflow 0.1s 1.1s forwards;
 }
 
 .c-container__circle {
 	margin: 0 auto 5.5rem;
 }
 
-/*=======================
-    C-Circle Sign
-=========================*/
-
 .o-circle__sign {
 	position: relative;
 	opacity: 0;
-	background: #fff;
-	animation-duration: 0.8s;
-	animation-delay: 0.2s;
-	animation-timing-function: ease-in-out;
-	animation-iteration-count: 1;
-	animation-fill-mode: forwards;
+	background: #fff; 
 }
-
-.o-circle__sign::before,
-.o-circle__sign::after {
-	content: '';
-	position: absolute;
-	background: inherit;
-}
-
-.o-circle__sign::after {
-	left: 100%;
-	top: 0%;
-	width: 500%;
-	height: 95%;
-	transform: translateY(4%) rotate(0deg);
-	border-radius: 0;
-	opacity: 0;
-	animation: set-shaddow 0s 1.13s ease-in-out forwards;
-	z-index: -1;
-}
-
-/*=======================
-	Sign Success
-=========================*/
 
 .o-circle__sign--success {
 	background: rgb(56, 176, 131);
 }
-
-.o-circle__sign--success .o-circle__sign {
-	width: 1rem;
-	height: 6rem;
-	border-radius: 50% 50% 50% 0% / 10%;
-	transform: translateX(130%) translateY(35%) rotate(45deg) scale(0.11);
-	animation-name: success-sign-appearance;
+.check-mark-sign{
+	color: white;
+	float: right;
+	font-size: 100px;
+	font-weight: bold;
+	margin: auto;
 }
-
-.o-circle__sign--success .o-circle__sign::before {
-	bottom: -17%;
-	width: 100%;
-	height: 50%;
-	transform: translateX(-130%) rotate(90deg);
-	border-radius: 50% 50% 50% 50% / 20%;
-}
-
-/*--shadow--*/
-.o-circle__sign--success .o-circle__sign::after {
-	background: rgb(40, 128, 96);
-}
-
-/*=======================
-	Sign Failure
-=========================*/
 
 .o-circle__sign--failure {
-	background: rgb(236, 78, 75);
+	background: red;
 }
 
-.o-circle__sign--failure .o-circle__sign {
-	width: 1rem;
-	height: 7rem;
-	transform: translateY(25%) rotate(45deg) scale(0.1);
-	border-radius: 50% 50% 50% 50% / 10%;
-	animation-name: failure-sign-appearance;
+.x-sign{
+	color: white;
+	float: right;
+	font-size: 100px;
+	font-weight: bold;
+	margin: auto;
 }
 
-.o-circle__sign--failure .o-circle__sign::before {
-	top: 50%;
-	width: 100%;
-	height: 100%;
-	transform: translateY(-50%) rotate(90deg);
-	border-radius: inherit;
-}
-
-/*--shadow--*/
-.o-circle__sign--failure .o-circle__sign::after {
-	background: rgba(175, 57, 55, 0.8);
-}
-
-/*CIRCLE*/
-@keyframes circle-appearance {
-	0% {
-		transform: scale(0);
-	}
-
-	50% {
-		transform: scale(1.5);
-	}
-
-	60% {
-		transform: scale(1);
-	}
-
-	100% {
-		transform: scale(1);
-	}
-}
-
-/*SIGN*/
-@keyframes failure-sign-appearance {
-	50% {
-		opacity: 1;
-		transform: translateY(25%) rotate(45deg) scale(1.7);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateY(25%) rotate(45deg) scale(1);
-	}
-}
-
-@keyframes success-sign-appearance {
-	50% {
-		opacity: 1;
-		transform: translateX(130%) translateY(35%) rotate(45deg) scale(1.7);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateX(130%) translateY(35%) rotate(45deg) scale(1);
-	}
-}
-
-@keyframes set-shaddow {
-	to {
-		opacity: 1;
-	}
-}
-
-@keyframes set-overflow {
-	to {
-		overflow: hidden;
-	}
-}
-
-
+/* ---------- */
 .button_lang {
 	cursor: pointer;
 	display: inline-block;
@@ -468,7 +333,9 @@ button.margin-right {
 	background: #00bcd4;
 	cursor: pointer;
 }
-
+#sliderRange{
+	direction: rtl;
+}
 .group { 
 	position:relative; 
 	margin-bottom:45px; 
@@ -479,23 +346,81 @@ button.margin-right {
 	display:block;
 	width:300px;
 	border:none;
-	border-bottom:1px solid #757575;
+	border-bottom:1px solid black;
 }
 
 input:focus {
 	outline:none;
 }
-.group > label {
-	color:#999; 
-	font-size:18px;
-	position:absolute;
-	left:5px;
-	top:10px;
-	transition:0.2s ease all; 
-}
 
-input:focus ~ label, input:valid ~ label {
+input:valid ~ label {
 	top:-20px;
 	font-size:14px;
-	color:#5264AE;
+	color:blueviolet;
+}
+
+.group > label {
+	position:absolute;
+	left:5px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	margin: 0;
+	margin-bottom: 1.3rem;
+	font-family: var(--headingFont);
+	font-weight: 400;
+	line-height: 1.3;
+	text-transform: capitalize;
+	letter-spacing: var(--letterSpacing);
+}
+
+h5 {
+	font-size: 1.25rem;
+}
+
+a {
+	text-decoration: none;
+}
+
+.img {
+	width: 100%;
+	display: block;
+	object-fit: fill;
+}
+
+.container-list {
+	margin-left: 4rem;
+	margin-right: 5rem;
+	display: grid;
+	gap: 10rem;
+	padding-bottom: 1rem;
+	grid-template-columns: 1fr 1fr;
+}
+
+.container-img {
+	/* height: 15rem; */
+	border-radius: var(--borderRadius);
+	margin-bottom: 1rem;
+	height: 24rem;
+}
+
+@media screen and (max-width: 600px) {
+	.container-img {
+		border-radius: var(--borderRadius);
+		margin-bottom: 1rem;
+		height: 9rem;
+		width: 130px;
+	}
+	.container-list {
+		margin-left: 4rem;
+		margin-right: 5rem;
+		display: grid;
+		gap: 1rem;
+		padding-bottom: 1rem;
+		grid-template-columns: 1fr 1fr;
+	}
 }
